Archive2/aa/f8da545fa895fd/output
main.cpp:5:2: error: use of undeclared identifier 'O'
{O
 ^
main.cpp:7:10: error: use of undeclared identifier 'ret_code'
    if ((ret_code == EOF) && (ferror(stdout)))   /* test whether EOF was reached */
         ^
2 errors generated.
